# term-workspace

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/term_devpanel/: launcher.py
src/term_workspace/: launcher.py  sidepanel.py
