[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-devpanel"
version = "0.1.1"
description = "tmux workspace launcher with clickable directory side panel and GPU/CPU monitoring"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Jaehee Kim" }]
dependencies = [
  "textual>=7.5.0",
  "psutil>=5.9.0",
  "rich>=14.0.0",
]
keywords = ["tmux", "terminal", "monitoring", "gpu", "tui"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/KimJaehee0725/term-workspace"
Issues = "https://github.com/KimJaehee0725/term-workspace/issues"

[project.scripts]
term-workspace = "term_devpanel.launcher:main"
term-sidepanel = "term_devpanel.sidepanel:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
